# Minty

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
boards/: pintycard.cmake  pintycard.h  pirto.cmake  pirto.h  pirto_ii_default.cmake  pirto_ii_default.h  pirto_ii_duo.cmake  pirto_ii_duo.h  pirto_ii_sd.cmake  pirto_ii_sd.h
cfg/: 0.cfg  0game-maps.csv  1.cfg  2.cfg  3.cfg  4.cfg  5.cfg  6.cfg  7.cfg  8.cfg
contrib/: README.md  pinty_flash_file_generator.py
firmware/: MiNTY.bas  Minty.bas  Minty.cfg  Minty_logo.bas  PiNTY.bas  Pinty_logo.bas  SndPlayer.bas  Sounds.bas  bin2header.py  build.bat  build.sh  font.bas  launcher.cfg  splash.bas  text.bas
include/: board.h  cartridge.h  config.h  debug.h  ecs.h  emu2149.h  fatfs_backend.h  fatfs_disk.h  ffconf.h  filesystem.h  fingerprints.h  flash_fs.h  hw_config.h  intellicart.h  interface.h  inty_cart.h  jlpflash.h  launcher.h  littlefs_backend.h  memory.h  mintyrom.h  myboard.h  pico_lfs.h  pintyrom.h  rom.h  rommeta_parser.h  sort.h  tusb_config.h  usb_tasks.h  utils.h  version.h  version.h.in  vfs.h
notes/: BUILD.txt  UF2.txt
scripts/: build-all.sh  build-board.sh
spikes/: mmu.c
spikes/ay_3_8910/: CMakeLists.txt  emu2149.c  main.c
spikes/ay_3_8910/boards/: waveshare_rp2350_pizero.h
src/: Makefile  cartridge.c  diskio.c  ecs.c  emu2149.c  fatfs_backend.c  fatfs_disk.c  filesystem.c  flash_fs.c  hw_config.c  intellicart.c  interface.c  inty_cart.c  jlpflash.c  launcher.c  littlefs_backend.c  main.c  memory.c  msc_disk.c  pico_lfs.c  rommeta_parser.c  sd_card_spi.c  sort.c  usb_descriptors.c  usb_tasks.c  utils.c  vfs.c
src/fatfs/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c  hw_config.c
src/fatfs/fl_driver/: fatfs_disk.c  flash_fs.c  msc_disk.c
src/fatfs/sd_driver/SPI/: sd_card_spi.c
support/: memmap_custom_16MB.ld
